# 4story-source

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  TClientCmd.tif  vcpkg.json
Lib/Own/FourStoryCommon/: CMakeLists.txt  README.md
Lib/Own/TNetLib/: CMakeLists.txt  TNetLib.sln
Server/TControlSvrAsio/: CMakeLists.txt  README.md  admin_shell.cpp  admin_shell.h  config.cpp  config.h  control_server.cpp  control_server.h  control_session.cpp  control_session.h  event_codec.cpp  event_codec.h  event_scheduler.cpp  event_scheduler.h  main.cpp  message_router.cpp  message_router.h  operator_session.h  peer_dialer.cpp  peer_dialer.h  peer_session.h  senders.cpp  senders.h  tcontrolsvr.example.toml  tcontrolsvr.security.toml  wire_codec.h
Server/TControlSvrAsio/db/: schema_validator.cpp  schema_validator.h
Server/TControlSvrAsio/handlers/: handlers.h  handlers_admin.cpp  handlers_auth.cpp  handlers_event.cpp  handlers_extra.cpp  handlers_patch.cpp  handlers_registry.cpp  handlers_service.cpp
Server/TControlSvrAsio/schema/: tcontrol-peer-registry.sql
Server/TControlSvrAsio/services/: admin_audit_logger.h  alerter.h  authority_gate.h  chat_ban_repository.cpp  chat_ban_repository.h  disabled_service_controller.h  event_registry.cpp  event_registry.h  event_repository.h  event_types.h  fake_admin_audit_logger.h  fake_event_repository.h  fake_operator_auth_service.cpp  fake_operator_auth_service.h  fake_patch_metadata_service.h  fake_service_inventory.h  fake_user_protected_service.h  mapper_profiles.h  operator_auth_service.h  operator_registry.cpp  operator_registry.h  patch_metadata_service.h  peer_registry.cpp  peer_registry.h  peer_repository.h  registry_event_bus.cpp  registry_event_bus.h  registry_persistence.h  scm_name_resolver.cpp  scm_name_resolver.h  service_controller.cpp  service_controller.h  service_controller_factory.cpp  service_controller_factory.h  service_inventory.h  soci_admin_audit_logger.cpp  soci_admin_audit_logger.h  soci_alerter.cpp  soci_alerter.h  soci_event_repository.cpp  (+22 more)
Server/TControlSvrAsio/tests/: test_admin_forwarders.cpp  test_admin_shell.cpp  test_admin_shell_cluster.cpp  test_admin_shell_route.cpp  test_admin_shell_stream.cpp  test_co_offload.cpp  test_control_server_hybrid.cpp  test_control_session_tls.cpp  test_event_scheduler.cpp  test_message_router.cpp  test_operator_login.cpp  test_patch_metadata.cpp  test_peer_client.cpp  test_peer_dialer_cn_enforce.cpp  test_peer_monitor.cpp  test_peer_registry.cpp  test_register_cn_validation.cpp  test_register_san_validation.cpp  test_registry_persistence.cpp  test_registry_refresher.cpp  test_scm_status_reconcile.cpp  test_service_controller.cpp  test_soci_repositories.cpp  test_wire_parity.cpp
Server/TLogSvrAsio/: CMakeLists.txt  README.md  config.cpp  config.h  log_server.cpp  log_server.h  main.cpp  tlogsvr.example.toml  tlogsvr.local.toml
Server/TLogSvrAsio/db/: schema_validator.cpp  schema_validator.h
Server/TLogSvrAsio/schema/: migrate-itemlogtl-to-tlog-audit.sql  tlog-audit.sql
Server/TLogSvrAsio/services/: audit_query_repository.h  log_sink.cpp  log_sink.h  mapper_profiles.h  retry_queue.cpp  retry_queue.h
Server/TLogSvrAsio/tests/: test_log_decoder.cpp  test_retry_queue.cpp  test_soci_log_sink.cpp
Server/TLoginSvrAsio/: CMakeLists.txt  README.md  admin_shell.cpp  admin_shell.h  config.cpp  config.h  handlers.cpp  handlers.h  health_endpoint.cpp  health_endpoint.h  login_server.cpp  login_server.h  main.cpp  nation.h  tloginsvr.example.toml  tloginsvr.local.toml
Server/TLoginSvrAsio/db/: schema_validator.cpp  schema_validator.h  session_pool.cpp  session_pool.h
Server/TLoginSvrAsio/schema/: 2fa-tables.sql  dev-account.sql  mssql-dev.sql  postgres-dev.sql
Server/TLoginSvrAsio/services/: audit_logger.h  auth_service.h  bcrypt_util.cpp  bcrypt_util.h  char_service.h  charname_validator.cpp  charname_validator.h  connection_registry.h  event_registry.h  fake_auth_service.cpp  fake_auth_service.h  fake_char_service.cpp  fake_char_service.h  fake_map_server_locator.cpp  fake_map_server_locator.h  fake_session_terminator.cpp  fake_session_terminator.h  in_memory_auth_service.cpp  in_memory_auth_service.h  in_memory_char_service.cpp  in_memory_char_service.h  in_memory_connection_registry.cpp  in_memory_connection_registry.h  in_memory_map_server_locator.cpp  in_memory_map_server_locator.h  in_memory_session_terminator.cpp  in_memory_session_terminator.h  local_connection_registry.cpp  local_connection_registry.h  local_event_registry.cpp  local_event_registry.h  map_server_locator.h  mapper_profiles.h  rate_limiter.cpp  rate_limiter.h  registry_refresher.cpp  registry_refresher.h  session_terminator.h  smtp_client.h  soci_auth_service.cpp  (+13 more)
Server/TLoginSvrAsio/tests/: test_auth_flow.cpp  test_char_flow.cpp  test_charname_validator.cpp  test_control_gate.cpp  test_duplicate_kick.cpp  test_event_registry.cpp  test_handshake.cpp  test_rc4_secret_length.cpp  test_session_terminator.cpp  test_shutdown_sweep.cpp  test_site_code.cpp  test_soci_auth_flow.cpp  (+5 more)
Server/TMapSvrAsio/: ARCHITECTURE.md  CMakeLists.txt  CONSOLIDATION.md  CSHandler.cpp  CSSender.cpp  DBAccess.cpp  DISPATCH.md  DebugSocket.h  Log.cpp  Log.h  QUEST_ENGINE.md  QuestComplete.cpp  QuestCraft.cpp  QuestDefaultTalk.cpp  QuestDieMon.cpp  QuestMission.cpp  QuestSendPost.cpp  README.md  SSHandler.cpp  SSSender.cpp  SvrInc.h  TAICmdAttack.cpp  TAICmdFollow.cpp  TAICmdRemove.cpp  TBowSettings.h  TCell.cpp  TCompanionClass.cpp  TInven.cpp  TItem.h  TMap.cpp  TMap.h  TMapSession.cpp  TMapSvr.aps  TMapSvr.cpp  TMapSvr.idl  TMapSvr.rc  TMapSvr.vcxproj  TMapSvrModule.h  TMapSvr_i.c  TMapType.h  (+49 more)
Server/TPatchSvrAsio/: CMakeLists.txt  README.md  config.cpp  config.h  handlers.cpp  handlers.h  main.cpp  patch_server.cpp  patch_server.h  patch_session.cpp  patch_session.h  tpatchsvr.example.toml  tpatchsvr.security.toml
Server/TWorldSvrAsio/: CMakeLists.txt  README.md  config.cpp  config.h  main.cpp  peer_session.h  tworldsvr.example.toml  wire_codec.h  world_server.cpp  world_server.h  world_session.cpp  world_session.h
(+2023 files in other folders)
